--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Solutions (or, more likely, solution attempts) for various [Project Euler](http://projecteuler.net/) problems.
+Solutions (or, more likely, solution attempts) for various "Project Euler":http://projecteuler.net/ problems.
